# pocket-to-bookmarks-html

./: .gitignore  README.md  pocket-to-bookmarks-html.py  pyproject.toml
.github/workflows/: python-publish.yml
