[project]
name = "pocket-to-bookmarks-html"
version = "0.1.3"
authors = [{ name = "David Poblador i Garcia" }]
description = "A pocket to bookmarks.html converter"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["beautifulsoup4>=4.12.3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]


[project.urls]
Homepage = "https://github.com/davidpoblador/pocket-to-bookmarks-html"
Issues = "https://github.com/davidpoblador/pocket-to-bookmarks-html/issues"

[tool.uv]
dev-dependencies = [
    "bump-my-version>=0.27.0",
    "twine>=5.1.1",
]
package = false

[project.scripts]
pocket2bookmarks = "pocket_to_bookmarks_html:main"

[tool.bumpversion]
current_version = "0.1.5"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

